# somecms

./: Cargo.toml  README.md
pub/html/: container.html  instance.html  instances.html  model.html  models.html
pub/js/: mvc.js
src/: instance.rs  main.rs  model.rs  query.rs  somelogger.rs  ui.rs  util.rs
