[package]
name = "somecms"
version = "0.1.0"
authors = ["amit"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.59"
r2d2 = "*"
r2d2_sqlite = "*"
rusqlite = { version = "0.24.2", features = ["bundled"] }
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
log = "0.4"
url = "*"